code changes for accsetupgl

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/AccSetupGL.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/AccSetupGL.cshtml
@@ -44,7 +44,7 @@
                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                             </div>
                             <div class="col-md-1">
-                                <label>Sheet Type</label>
+                                <label>Balance Sheet Type</label>
                             </div>
                             <div class="col-md-3">
                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", accSetupBalanceSheetDropdown)
