Bugs Code Correction .

--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/EmployeeServiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/EmployeeServiceList.cshtml
@@ -12,11 +12,11 @@
 <div class="page-content mt-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3 col-md-4 mb-3">
+            <div class="col-lg-2">
                 @Html.Partial("~/Views/EmployeeMaster/_EmployeeDetailsSidePannel.cshtml", keyValuePairs)
             </div>
 
-            <div class="col-lg-9 col-md-8">
+            <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center flex-wrap">
                         <span class="card-title">Employee Service List : @Model.FirstName @Model.LastName</span>
