--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLOpeningBalance/_ControlHeadTypeList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLOpeningBalance/_ControlHeadTypeList.cshtml
@@ -32,11 +32,11 @@
                                 <td class="text-center">
                                     @if (item.DebitCreditEnum == 0)
                                     {
-                                        <span style="color: red; font-weight: bold;">Dr</span>
+                                        <span style="color: red; font-weight: bold;">Debit</span>
                                     }
                                     else if (item.DebitCreditEnum == 1)
                                     {
-                                        <span style="color: blue; font-weight: bold;">Cr</span>
+                                        <span style="color: blue; font-weight: bold;">Credit</span>
                                     }
                                 </td>
                                 <td class="text-center">
