--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLOpeningBalance/_ControlHeadTypeList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLOpeningBalance/_ControlHeadTypeList.cshtml
@@ -36,7 +36,7 @@
                                     }
                                     else if (item.DebitCreditEnum == 1)
                                     {
-                                        <span style="color: blue; font-weight: bold;">Credit</span>
+                                        <span style="color: green; font-weight: bold;">Credit</span>
                                     }
                                 </td>
                                 <td class="text-center">
