--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLOpeningBalance/_NonControlHeadTypeList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLOpeningBalance/_NonControlHeadTypeList.cshtml
@@ -47,7 +47,7 @@
                                     }
                                     else if (item.DebitCreditEnum == 1)
                                     {
-                                        <span style="color: blue; font-weight: bold;">Credit</span>
+                                        <span style="color: green; font-weight: bold;">Credit</span>
                                     }
                                 </td>
                             </tr>
