Code Check in For AccGLOpeningBalance Contro & Non -Control Head

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLOpeningBalance/_ControlHeadTypeList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLOpeningBalance/_ControlHeadTypeList.cshtml
@@ -28,7 +28,14 @@
                         {
                             <tr>
                                 <td class="text-center">@item.GLName</td>
-                                <td class="text-center">@item.OpeningBalance</td>
+                                <td class="col-auto">
+                                    <div>
+                                        <input class="form-control form-control-sm text-center opening-balance"
+                                               type="text"
+                                               value="@item.ClosingBalance"
+                                        @(item.ClosingBalance > 0 ? "readonly" : "") />
+                                    </div>
+                                </td>
                                 <td class="text-center">
                                     @if (item.DebitCreditEnum == 0)
                                     {
