--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/UserType/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/UserType/_List.cshtml
@@ -20,6 +20,9 @@
                         <tr>
                             <td>@item.UserTypeCode</td>
                             <td>@item.UserDescription</td>
+                            <td>
+                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
+                            </td>
                             
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?userTypeId=@item.UserTypeId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">
