Code Correction bugs GMSD-470 Accounts -Form fields like Centre, Balance Sheet Name, Balance Sheet Type, and Code are not properly aligned. GMSD-469 Accounts - The Centre field is editable and allows modification. GMSD-466 Accounts - Irrelevant Options in 'User Type' Dropdown GMSD-463 Accounts - Balance Sheet Code Field Accepts Invalid Characters and Excessive Length GMSD-461 Accounts - Spelling mistake in "Transaction Reference Number" label on Create Transaction page GMSD-460 Accounts - On clicking Save, the Financial Year field gets cleared

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLTransaction/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLTransaction/CreateEdit.cshtml
@@ -84,13 +84,12 @@
 										</div>
 									</div>
 								</div>
-							
+
 								<div class="mb-3">
-									<button type="button" id="addRowButton" class="btn btn-sm btn-soft-success btn-circle ">
-										<i class='fas ti-plus'></i>
+									<button type="button" id="addRowButton" class="btn btn-success">
+										<i class="fas fa-plus me-1"></i> Add Transaction Row
 									</button>
 								</div>
-
 								<!-- Transaction Details Table -->
 								<div id="accGLTransactionDetailsId">
 									<table id="example" class="table table-striped">
