--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupBalanceSheet/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupBalanceSheet/CreateEdit.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = Model.AccSetupBalanceSheetId > 0 ? "Update BalanceSheet" : "Add BalanceSheet";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, IsDisabled = Model.AccSetupBalanceSheetId > 0 };
     DropdownViewModel accSetupBalanceSheetDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccSetupBalanceSheetType.ToString(), DropdownName = "AccSetupBalanceSheetTypeId", DropdownSelectedValue = Model.AccSetupBalanceSheetTypeId.ToString() };
-}                                                                                                              
+}
 
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -32,35 +32,39 @@
                         {
                             @Html.HiddenFor(m => m.AccSetupBalanceSheetId)
                             <div class="row">
-                                <div class="col-lg-8">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.CentreCode)
+                                        @if (Model.AccSetupBalanceSheetId > 0)
+                                        {
+                                            @Html.HiddenFor(m => m.CentreCode)
+                                        }
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.AccSetupBalanceSheetTypeId, new { @class = "form-label required"})
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml",  accSetupBalanceSheetDropdown) 
+                                        @Html.LabelFor(x => x.AccSetupBalanceSheetTypeId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", accSetupBalanceSheetDropdown)
                                         @Html.ValidationMessageFor(x => x.AccSetupBalanceSheetTypeId)
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.AccBalancesheetHeadDesc, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.AccBalancesheetHeadDesc, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.AccBalancesheetHeadDesc)
                                     </div>
                                 </div>
-                                <div class="Idcol-lg-6">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.AccBalancesheetCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.AccBalancesheetCode, new { @class = "form-control", onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @Html.TextBoxFor(x => x.AccBalancesheetCode, new { @class = "form-control", onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
                                         @Html.ValidationMessageFor(x => x.AccBalancesheetCode)
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
                                         <div class="form-check">
