--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
@@ -65,14 +65,14 @@
                     <!-- GL Name -->
                     <div class="flex flex-col space-y-2">
                         @Html.LabelFor(x => x.GLName, new { @class = "form-label required" })
-                        @Html.TextBoxFor(x => x.GLName, new { @class = "form-control" })
+                        @Html.TextBoxFor(x => x.GLName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
                         <span class="text-danger" data-valmsg-for="GLName"></span>
                     </div>
 
                     <!-- GL Code -->
                     <div class="flex flex-col space-y-2">
                         @Html.LabelFor(x => x.GLCode, new { @class = "form-label required" })
-                        @Html.TextBoxFor(x => x.GLCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                        @Html.TextBoxFor(x => x.GLCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
                         <span class="text-danger" data-valmsg-for="GLCode"></span>
                     </div>
 
