--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGLBank/_AccsetupGLBank.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGLBank/_AccsetupGLBank.cshtml
@@ -14,7 +14,7 @@
             <div class="col-lg-4">
                 <div class="mb-3">
                     @Html.LabelFor(x => x.BankAccountName, new { @class = "form-label required" })
-                    @Html.TextBoxFor(x => x.BankAccountName, new { @class = "form-control"})
+                    @Html.TextBoxFor(x => x.BankAccountName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
                     <span class="text-danger" data-valmsg-for="BankAccountName"></span>
                 </div>
             </div>
@@ -35,7 +35,7 @@
             <div class="col-lg-4">
                 <div class="mb-3">
                     @Html.LabelFor(x => x.IFSCCode, new { @class = "form-label required" })
-                    @Html.TextBoxFor(x => x.IFSCCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                    @Html.TextBoxFor(x => x.IFSCCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()", @maxlength = "11" })
                     <span class="text-danger" data-valmsg-for="IFSCCode"></span>
                 </div>
             </div>
