--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGLBank/_AccsetupGLBank.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGLBank/_AccsetupGLBank.cshtml
@@ -35,7 +35,7 @@
             <div class="col-lg-4">
                 <div class="mb-3">
                     @Html.LabelFor(x => x.IFSCCode, new { @class = "form-label required" })
-                    @Html.TextBoxFor(x => x.IFSCCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()", @maxlength = "11" })
+                    @Html.TextBoxFor(x => x.IFSCCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacingAndSpecialCharacters()", @maxlength = "11" })
                     <span class="text-danger" data-valmsg-for="IFSCCode"></span>
                 </div>
             </div>
@@ -43,3 +43,4 @@
 
     }
 </div>
+<script src="~/js/coditech/Common/CoditechCommon.js"></script>
