--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
@@ -19,7 +19,7 @@
                 DropdownName = "UserTypeId",
                 DropdownSelectedValue = Convert.ToString(Model.UserTypeId),
                 IsDisabled = mode == "edit",
-                ExcludedValues = new string[] { "Admin", "Branch","Gym Member","Patient","Tainee"}
+                ExcludedValues = new string[] { "Admin", "Branch","Gym Member","Patient","Trainee"}
             };
 
 
