--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Control/_DropdownList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Control/_DropdownList.cshtml
@@ -1,13 +1,17 @@
-﻿@using Coditech.Admin.Helpers
-@model DropdownViewModel
+﻿@model DropdownViewModel
 @{
     CoditechDropdownHelper.GeneralDropdownList(Model);
+
+    var htmlAttributes = new Dictionary<string, object>
+    {
+        { "class", "form-select select2-dropdown " + Model.ClassName },
+        { "onchange", Model.ChangeEvent },
+        { "id", Model.DropdownName }
+    };
+    if (Model.IsDisabled)
+    {
+        htmlAttributes["disabled"] = "disabled";
+    }
 }
-@if (Model.IsDisabled)
-{
-    @Html.DropDownList(Model.DropdownName, Model.DropdownList, new { @class = "form-select " + Model.ClassName, @onchange = Model.ChangeEvent, @disabled = "disabled" })
-}
-else
-{
-    @Html.DropDownList(Model.DropdownName, Model.DropdownList, new { @class = "form-select " + Model.ClassName, @onchange = Model.ChangeEvent })
-}
+
+@Html.DropDownList(Model.DropdownName, Model.DropdownList, htmlAttributes)
