--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -36,8 +36,7 @@
     <link href="~/css/layout/bootstrap-select.min.css" rel="stylesheet" />
     <link href="~/css/layout/site.css" rel="stylesheet" />
     <link href="~/css/layout/jstree.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-
+    <link href="~/css/layout/select2.min.css" rel="stylesheet" />
     @if (!Convert.ToBoolean(CoditechAdminSettings.IsDefaultTheme))
     {
         <link href="~/css/layout/@CoditechAdminSettings.ThemeColor-theme.css" rel="stylesheet" />
@@ -144,7 +143,6 @@
             @*<span class="text-muted d-none d-sm-inline-block float-end">Crafted with <i class="mdi mdi-heart text-danger"></i> by Mannatthemes</span>*@
         </div>
     </footer>
-  
     <!-- jQuery  -->
     <script src="~/js/layout/jquery.min.js"></script>
     <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
@@ -158,26 +156,12 @@
     <script src="~/js/layout/daterangepicker.js"></script>
     <script src="~/js/layout/app.js"></script>
     <script src="~/js/layout/bootstrap-select.min.js"></script>
+    <script src="~/js/layout/select2.min.js"></script>
     <!-- coditech script-->
     <script src="~/js/coditech/common/coditechcommon.js"></script>
     <script src="~/js/coditech/common/coditechdatatable.js"></script>
     <script src="~/js/coditech/common/coditechnotification.js"></script>
     <script src="~/js/coditech/user.js"></script>
-    <!-- Auto Serach  script-->
-    <!-- jQuery  -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <!-- For Implementation testting sathi thevla ahe -->
-    <script>
-        $(document).ready(function () {
-          $('.select2-dropdown').select2({
-            placeholder: "--------- Select ----------",
-            allowClear: true,
-            width: '100%'
-          });
-        });
-    </script>
-  
 </body>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
@@ -194,4 +178,9 @@
             }
         }
     };
+    $('.select2-dropdown').select2({
+        placeholder: "--------- Select ----------",
+        allowClear: true,
+        width: '100%'
+    });
 </script>
