--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -215,6 +215,14 @@
             @Html.ValidationMessageFor(x => x.GeneralOccupationMasterId)
         </div>
     </div>
+    <div class="col-lg-3">
+        <div class="mb-3">
+            @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+            <div class="form-check">
+                @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
+            </div>
+        </div>
+    </div>
     @if (Model.PersonId != 0)
     {
         <div class="col-lg-3">
