--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
@@ -383,3 +383,11 @@ td.text-center a.btn {
 body[data-layout="horizontal"] .page-wrapper .page-content {
     margin-top: 1rem !important;
 }
+.table > tbody tr {
+    line-height: 30px !important;
+}
+
+.table > tbody tr td {
+    padding: 0.12rem .3rem !important;
+}
+
