--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
@@ -391,3 +391,6 @@ body[data-layout="horizontal"] .page-wrapper .page-content {
     padding: 0.12rem .3rem !important;
 }
 
+.card-header {
+    padding: .35rem 1rem !important;
+}
