--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/theme-brown.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/theme-brown.css
@@ -1,5 +1,5 @@
 :root {
-    --primaryColor: #be733e;
+    --primaryColor: #b65e3a;
     --secondaryColor: #2F5061;
     --tertiaryColor: #eeeeee;
     --black: #000000;
