Theme secondary color changes

--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/theme-brown.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/theme-brown.css
@@ -1,6 +1,6 @@
 :root {
     --primaryColor: #b65e3a;
-    --secondaryColor: #2F5061;
+    --secondaryColor: #0c213a;
     --tertiaryColor: #eeeeee;
     --black: #000000;
     --white: #ffffff;
