--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
 	UserModel userData = SessionHelper.GetDataFromSession<UserModel>(AdminConstants.UserDataSession);
 	string applicationLogoPath = CoditechAdminSettings.ApplicationLogoPath;
 	string applicationLogoSmallPath = CoditechAdminSettings.ApplicationLogoSmallPath;
-	string applicationLogoBackground = CoditechAdminSettings.ApplicationLogoBackground;
 	string applicationLayoutBackground = CoditechAdminSettings.ApplicationLayoutBackground;
 	string applicationTitle = CoditechAdminSettings.ApplicationTitle;
 	string dashboardUrl = CoditechAdminSettings.DashboardUrl;
@@ -51,7 +50,7 @@
 		<!-- Top Bar Start -->
 		<div class="topbar">
 			<!-- LOGO -->
-			<div class="brand" style="background-color:@applicationLogoBackground !important">
+			<div class="brand logo-background">
 				<a href="..@dashboardUrl" class="logo">
 					<span>
 						@if (!string.IsNullOrEmpty(userData?.LogoSmallMediaPath))
