--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Profile.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Profile.cshtml
@@ -15,7 +15,7 @@
         else
         {
             <div class="avatar-box thumb-xxs align-self-center">
-                <span class="avatar-title bg-soft-pink rounded-circle">@Model.FirstName.Substring(0, 1)@Model.LastName.Substring(0, 1)</span>
+                <span class="avatar-title avatar-color rounded-circle">@Model.FirstName.Substring(0, 1)@Model.LastName.Substring(0, 1)</span>
             </div>
         }
     </a>
